--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,16 @@
   = javascript_include_tag "application", "data-turbolinks-track" => true
   = csrf_meta_tags
 %body
-  = yield
+  %header
+    .wrapper
+      #small-logo
+        .img
+      #menu
+        %nav
+          %a{href: "#"}="Home"
+          %a.active{href: "#"}="Ruby/RoR Course"
+          %a{href: "#"}="JS Course"
+          %a{href: "#"}="Coaches"
+  #content
+    = yield
+  %footer
