--- a/app/assets/stylesheets/fonts.css.erb
+++ b/app/assets/stylesheets/fonts.css.erb
@@ -30,3 +30,14 @@
   font-weight: bold;
   font-style: normal;
 }
+
+/*@font-face {
+  font-family: 'Raleway';
+  src: url('/fonts/raleway/raleway-medium-webfont.eot');
+  src: url('/fonts/raleway/raleway-medium-webfont.eot?#iefix"') format('embedded-opentype'),
+       url('/fonts/raleway/raleway-medium-webfont.woff') format('woff'),
+       url('/fonts/raleway/raleway-medium-webfont.otf') format('opentype'),
+       url('/fonts/raleway/raleway-medium-webfont.svg#raleway-light') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}*/
