--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,54 +17,8 @@
           %a{href: "#"}="Ruby/RoR Course"
           %a{href: "#"}="JS Course"
           %a{href: "#"}="Coaches"
-
   #content
-    #start-group
-      #big-logo
-        .img
-      .title < it's about sharing knowledge >
-      #photo-team
-        #photo
-          #backgr
-        #team-description
-          CodeAngels is a team of professional and experienced web developers who passionate about what they doing, and want to expand the boarders of IT community in Ukraine. We share our knowledges by handling meetups and free courses for web developers. If you're smart and curious person who loves coding, you should definitely visit our courses and events.
-    #ror-course-group
-      .title < Ruby/Ruby on Rails course >
-      .all
-        .two-big
-          .green-box
-            You’ll learn everything you need to know about Ruby to be a productive programmer. And it'll take you a step further. You’ll also learn Ruby design principles and techniques to help you become a better all-around Ruby programmer. You’ll learn exactly how all the pieces go together, and you’ll come away with the confidence that you truly understand Ruby. Ruby on Rails is a breakthrough in lowering the barriers of entry to programming. Powerful web applications that formerly might have taken weeks or months to develop can be produced in a matter of days.
-          .orange-box
-            With the series of lections and practical workshops you will learn how to use such powerful tools as Ruby programming language and Ruby on Rails framework.
-            %br
-            %br
-            %br The basic topics include:
-            %p > Programming with Ruby
-            %p > Meta-programming Ruby
-            %p > Efficient WEB-applications development based on Ruby on Rails
-            %p > Test-driven development practices (TDD, BDD, RSpec)
-            %p > Recipes, templates, tools, programming techniques for Ruby/Rails developer
-            %p > Work using Extreme Programming   practices
-            %p > Projects development using Scrum    methodology
-        .violet-box Apply
-    #js-course
-      .title < JavaScript on Rails course >
-      .all
-        .two-big
-          .green-box
-            You’ll learn everything you need to know about JavaScript to be a productive programmer. You'll learn libraries and frameworks that will help you to build web applications quickly and efficiently. You will also know what should be done when things go wrong and you face the problem. It is critical to know how and why everything works.  We'll demonstrate optimal ways to load code onto page, and show some tips that help your JavaScript run as efficiently and quickly as possible. You'll learn the best practices to build and deploy your files to production environment, and how to use tools that can rapidly help you to find out any problems once you put your site on a Web server.
-          .orange-box
-            With the series of lections and practical workshops you will learn how to use such powerful tools as JavaScript programming language and JS frameworks and tips. 
-            %br
-            %br
-            The basic topics include:
-            %p > Programming with JavaScript
-            %p > High level JS languages(CoffeeScript,       TypeScript)
-            %p > Popular JS frameworks(Backbone.js,        Angular.js, Marionette.js...)
-            %p > Testing JS applications(Jasmine, Mocha...)
-            %p > Server-side JavaScript(Node.JS, Meteor.JS...)
-            %p > Speeding page loading time using various    technics
-            %p > HTML and CSS basics
-        .violet-box Participation request
     = yield
   %footer
+    #contact contact: info@rubygarage.org
+    #copyright © 2011-2013 RubyGarage
